/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    `java-library`
    `maven-publish`
    id("io.ktor.plugin") version "2.3.1"
}

application {
    mainClass.set("clean2048.Clean2048")
}

repositories {
    mavenLocal()
    maven {
        url = uri("https://repo.maven.apache.org/maven2/")
    }
}


dependencies {
    implementation("com.googlecode.lanterna:lanterna:3.1.1")
    implementation("org.projectlombok:lombok:1.18.26")
    testImplementation("junit:junit:4.13.1")
    compileOnly("org.projectlombok:lombok:1.18.26")
    annotationProcessor("org.projectlombok:lombok:1.18.26")
}

ktor {
    fatJar {
        archiveFileName.set("2048.jar")
    }
}

group = "groupId"
version = "1.0-SNAPSHOT"
description = "Clean2048"
java.sourceCompatibility = JavaVersion.VERSION_17


publishing {
    publications.create<MavenPublication>("maven") {
        from(components["java"])
    }
}
